# bookies_model_dashboard

./: Home.py  README.md  pyproject.toml  requirements.txt
data/: test_1x2.csv  test_asian.csv  test_total.csv  valid_1x2.csv  valid_asian.csv  valid_over_under.csv
pages/: 01 🧾 About  the project.py  01 🧾 Model Stealing Concept.py  02 📦 Knowledge Distillation.py  03 💾 Data.py  04 🔨 The  Model.py  05 🚢 Results.py  06 🎁 Future works.py  07 ✔️ References.py  10 💾 Data.py  20 🔨 Breaking a model.py  21 🚢 Results.py  30 🎁 Future works.py
