[tool.poetry]
name = "bookies_model_dashboard"
version = "0.1.0"
description = ""
authors = ["Meher Kharbachi"]
readme = "README.md"
packages = [{include = "bookies_model_dashboard"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
torch = "^2.0.1"
streamlit = "^1.26.0"
plotly = "^5.16.1"
matplotlib = "^3.7.3"
pytorch-lightning = "^2.0.9"
scikit-learn = "^1.2.2"
streamlit-extras = "^0.2.7"
torchvision = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
